# HsOpenCL

./: HsOpenCL.cabal  LICENSE  OpenCL.hs  opencl.cabal  platform_helpers.c
OpenCL/: Buffer.chs  CommandQueue.chs  Context.chs  Error.chs  Kernel.chs  Memory.chs  MonadQueue.hs  Platform.chs  Platform.hsc  Program.chs  Simple.hs  TH.hs
OpenCL/Context/: Retainer.chs
OpenCL/Helpers/: C2HS.hs  Types.chs  Types.hs
OpenCL/Instances/: CArray.hs
OpenCL/Internal/: C2HS.hs  Types.chs
OpenCL/Platform/: Foreign.chs
System/: HsOpenCL.hs
System/HsOpenCL/: CommandQueue.chs  Context.chs  Error.chs  Kernel.chs  Memory.chs  MonadQueue.hs  Platform.hsc  Program.chs  Simple.hs  TH.chs  TH.hs
System/HsOpenCL/Instances/: CArray.hs  Vector.hs
System/HsOpenCL/Internal/: C2HS.hs  Types.chs
System/HsOpenCL/Platform/: Foreign.chs
cbits/: opencl_wrappers.c
includes/: opencl_wrappers.h
tests/: Add.hs  EventTiming.hs  KernelProperties.hs  MultiLine.hs  OtherProperties.hs  Parse.hs  ProgTest.hs  SliceTest.hs  Test1.hs  Test2.hs  TestParse.hs  memflagtest.hs  test_prog.cl
tests/bench/: MatrixMult.hs  ProfCommand.hs  Transpose.hs  transpose.cl
tests/print-properties/: DeviceProperties.hs  Main.hs
tests/property-tests/: DeviceProperties.hs  KernelProperties.hs  OtherProperties.hs  ProgTest.hs
