name:                HsOpenCL
version:             0.0
synopsis:            A binding to the OpenCL parallel computing framework.
description:         <Project description>
category:            
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judah.jacobson@gmail.com
build-depends:       base>=4, haskell98, bytestring, array, mtl,
                     -- For OpenCL.TH:
                     template-haskell, parsec==3.*,
                     -- For OpenCL.Instances:
                     carray
build-type:          Simple
ghc-options:         
build-tools: c2hs
exposed-modules:
    System.HsOpenCL.Error
    System.HsOpenCL.Platform
    System.HsOpenCL.Program
    System.HsOpenCL.CommandQueue
    System.HsOpenCL.Kernel
    System.HsOpenCL.Memory
    System.HsOpenCL
    System.HsOpenCL.Instances.CArray
    System.HsOpenCL.TH
other-modules:
    System.HsOpenCL.Internal.C2HS
    System.HsOpenCL.Internal.Types
    System.HsOpenCL.Platform.Foreign
extensions: ForeignFunctionInterface, DeriveDataTypeable, EmptyDataDecls,
            ScopedTypeVariables, GADTs, MultiParamTypeClasses
            TypeSynonymInstances, FlexibleInstances, FlexibleContexts,
            OverlappingInstances
            Rank2Types, TemplateHaskell
frameworks: OpenCL
-- Note: -fvia-C prevents a segfault (ghc trac #3789)
ghc-options: -fvia-C
