cabal-version:       >= 1.6
name:                HsOpenCL
version:             0.0.1
synopsis:            A binding to the OpenCL parallel computing framework.
description:         HsOpenCL is a \"middle-level\" API which improves type 
                     safety, convenience and abstraction over the OpenCL C interface
                     while providing essentially the same programming model.
                     The library can be used to copy data to and from an OpenCL device;
                     to load kernels written in
                     OpenCL's C-like language; and to build and run those kernels.
                     .
                     The library currently supports a significant chunk of the OpenCL
                     standard.  The major omissions are:
                     .
                       * Images
                     .
                       * Mapped buffers and images
                     . 
                       * Fine-tuned control of out-of-order queue execution
                     .
                     Additionally, the library has only been tested with Mac OS X Snow
                     Leopard; patches are welcome to get it working on other
                     platforms.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judah.jacobson@gmail.com
build-type:          Simple

flag vector-instances
    Description: include instances for copying to/from Vectors.
    Default: True

Library
    build-tools: c2hs
    build-depends:   base>=4.3 && < 5, bytestring==0.9.*, array>=0.2 && < 0.4,
                     mtl==1.1.*,
                     -- For OpenCL.TH:
                     template-haskell>=2.5 && < 2.6, parsec==3.*,
                     -- For OpenCL.Instances:
                     carray==0.1.*
    exposed-modules:
        System.HsOpenCL.Error
        System.HsOpenCL.Platform
        System.HsOpenCL.Program
        System.HsOpenCL.CommandQueue
        System.HsOpenCL.Kernel
        System.HsOpenCL.Memory
        System.HsOpenCL
        System.HsOpenCL.Instances.CArray
        System.HsOpenCL.TH

    -- vector-0.5.1 is not released on Hackage yet, so wrap this in a flag.
    if flag(vector-instances) {
        build-depends: vector>=0.5.1 && <0.6
        exposed-modules: System.HsOpenCL.Instances.Vector
}

    other-modules:
        System.HsOpenCL.Internal.C2HS
        System.HsOpenCL.Internal.Types
        System.HsOpenCL.Platform.Foreign
    extensions: ForeignFunctionInterface, DeriveDataTypeable, EmptyDataDecls,
                ScopedTypeVariables, GADTs, MultiParamTypeClasses
                TypeSynonymInstances, FlexibleInstances, FlexibleContexts,
                OverlappingInstances
                Rank2Types, TemplateHaskell
    frameworks: OpenCL
    ghc-options: -Wall -fno-warn-orphans -fno-warn-unused-do-bind
