name:                OpenCL-temp
version:             0.0
synopsis:            <Project description>
description:         <Project description>
category:            
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judah.jacobson@gmail.com
build-depends:       base>=4, haskell98
build-type:          Simple
ghc-options:         
include-dirs: includes
build-tools: c2hs
exposed-modules:
    OpenCL.CommandQueue
    OpenCL.Context
    OpenCL.Buffer
    OpenCL.Error
    OpenCL.Platform
other-modules:
    OpenCL.Helpers.C2HS
    OpenCL.Helpers.Types
c-sources: cbits/opencl_wrappers.c
includes: opencl_wrappers.h
extensions: ForeignFunctionInterface, DeriveDataTypeable, EmptyDataDecls,
            ScopedTypeVariables
frameworks: OpenCL
ghc-options:
