name:                OpenCL-temp
version:             0.0
synopsis:            <Project description>
description:         <Project description>
category:            
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judah.jacobson@gmail.com
build-depends:       base>=4, haskell98, carray
build-type:          Simple
ghc-options:         
build-tools: c2hs
exposed-modules:
    OpenCL.Error
    OpenCL.Platform
    OpenCL.Context
    OpenCL.Program
    OpenCL.CommandQueue
    OpenCL.Buffer
    OpenCL.Kernel
    OpenCL
    OpenCL.Simple
other-modules:
    OpenCL.Helpers.C2HS
    OpenCL.Helpers.Types
    OpenCL.Platform.Foreign
extensions: ForeignFunctionInterface, DeriveDataTypeable, EmptyDataDecls,
            ScopedTypeVariables, TypeSynonymInstances, FlexibleInstances,
            GADTs
frameworks: OpenCL
-- Note: -fvia-C prevents a segfault (ghc trac #3789)
ghc-options: -fvia-C
